style/module/dialog.css
/* 对话框 */

@import url(/appearance/themes/Dark+/style/module/config.css);
@import url(/widgets/custom.css);

/* 对话框透明元素 */
div.b3-dialog__container #searchList,
div.b3-dialog__container #searchPreview,
/* div.b3-dialog__container>div:nth-child(3), */
/* div.b3-dialog__container>div:nth-child(3)>div.fn__flex-column, */
div.b3-dialog__container div.search__header,
div.b3-dialog__container div.search__header>input,
div.b3-dialog__container div.fn__flex>ul.b3-list>li.b3-list-item:not(.b3-list-item--focus),
div.b3-dialog__container div.fn__flex>div.b3-tab-container,
div.b3-dialog__container div.fn__flex>div.b3-tab-container div.config-account__center--text {
    background-color: transparent;
}

/* 对话框遮罩 */
div.b3-dialog__scrim {
    background-color: var(--custom-dialog-scrim-background-color);
}

/* 搜索控件 */
/* div.b3-dialog__container div.fn__flex-column>div.b3-form__space--small {
    background-color: var(--custom-editor-breadcrumb-bar-background-color);
} */

/* 对话框背景图片 */
div.b3-dialog__container {
    background-image: var(--custom-background-image-dialog);
    background-size: cover !important;
    background-repeat: no-repeat !important;
    background-position: center !important;
    background-attachment: fixed !important;
    background-color: transparent !important;
}

/* 对话框半透明颜色 */
div.b3-dialog__container>div:nth-child(3),
div.b3-dialog__container div.b3-dialog__header {
    background-color: var(--custom-dialog-background-color);
}

/* 主题预览对话框 */
#configBazaarReadme {
    background-color: var(--custom-dialog-readme-background-color);
}

/* 自定义属性名称全宽显示 */
div.b3-dialog__container label.customItem>span.ft__on-surface.fn__flex-center {
    min-width: 100px;
    width: auto !important;
}

/** 搜索对话框
 *  REF: [siyuan-themes-tsundoku-dark/ctrlP.css at main · Achuan-2/siyuan-themes-tsundoku-dark](https: //github.com/Achuan-2/siyuan-themes-tsundoku-dark/blob/main/style/ctrlP.css)
 */
/* 搜索对话框尺寸 */
body>div[data-key]>.b3-dialog>.b3-dialog__container,
body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column {
    width: var(--custom-dialog-search-width) !important;
    height: var(--custom-dialog-search-height) !important;
}

/* 关闭按钮 */
body>div[data-key]>.b3-dialog>.b3-dialog__container>svg.b3-dialog__close:hover {
    background-color: var(--b3-theme-on-surface);
}

/* 窗口较窄 */
@media screen and (max-width: 1280px) {

    /* 调整关闭按钮位置, 避免被遮挡 */
    body>div[data-key]>.b3-dialog>.b3-dialog__container>svg.b3-dialog__close {
        right: calc((100vw - var(--custom-dialog-search-width)) / -2);
    }
}

/* 窗口较宽时并排显示搜索结果 */
@media screen and (min-width: 960px) {

    /* 弹性盒子模式: 水平显示, 必要时折行 */
    body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column {
        flex-direction: row !important;
        flex-wrap: wrap;
    }

    /* 设置需要占满一行的项目 */
    body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column .search__header,
    body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column .b3-form__space--small {
        width: 100%;
    }

    body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column #searchList,
    body>div[data-key]>.b3-dialog>.b3-dialog__container>div>.fn__flex>.fn__flex-column #searchPreview {
        float: left;
        width: 50% !important;
        height: calc(100% - 84px) !important;
    }
}

